packages/jsii/test/negatives/neg.method-name.1.ts
///!MATCH_ERROR: Method and property names must use camelCase: METHOD

export class MyClass {
    public METHOD() {
        return "hi";
    }
}
